# rkshare

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md  flake.nix  toolchain.toml
.github/workflows/: build.yml  docs.yml
bindings/pyo3/: Cargo.toml
bindings/pyo3/rkshare/: akshare.pyi
bindings/python/: Cargo.toml  example.ipynb  pyproject.toml  rkshare.pyi
bindings/python/examples/: main.py
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  deno.json  example.ts
bindings/wasm/src/: lib.rs
cli/: Cargo.toml
cli/src/cli/: get.rs  mod.rs  serve.rs  utils.rs
pyo3-rkshare/: Cargo.toml  build.rs
pyo3-rkshare/examples/: main.py
pyo3-rkshare/rkshare/: __init__.py
pyo3-rkshare/src/: lib.rs
rkshare/: Cargo.toml
rkshare-api/: Cargo.toml
rkshare-eastmoney/: Cargo.toml
rkshare-eastmoney/src/: basic_org_info.ipynb  basic_org_info.rs  center_gridlist.rs  cli.rs  lib.rs
rkshare-server/: Cargo.toml
rkshare-server/src/: main.rs
rkshare-sse/: Cargo.toml
rkshare-sse/examples/: cli.rs  deal_daily.rs
rkshare-sse/src/: cli.rs  lib.rs  utils.rs
rkshare-sse/src/stock/: deal_daily.rs  mod.rs  summary.rs
rkshare-szse/: Cargo.toml
rkshare-szse/examples/: cli.rs
rkshare-tools/: Cargo.toml
rkshare-tools/src/: main.rs  pretty.rs
rkshare-tools/src/cli/: get.rs  mod.rs  serve.rs  utils.rs
rkshare-utils/: Cargo.toml
rkshare-utils/src/: cli.rs  data.rs  lib.rs  mapping.rs  pretty.rs  symbol.rs
rkshare-xq/: Cargo.toml
rkshare-xq/examples/: cli.rs
rkshare-xq/src/: detail.rs  lib.rs
rkshare-xueqiu/: Cargo.toml
rkshare-xueqiu/src/: cli.rs  detail.rs
rkshare/examples/: basic.rs
rkshare/src/: lib.rs
rkshare_server/: Cargo.toml
rkshare_sse/: Cargo.toml  README.md  sse.ts  try-arrow.ts
rkshare_sse/examples/: summary.rs
rkshare_sse/src/: lib.rs
rkshare_szse/: Cargo.toml
rkshare_szse/examples/: area_summary.rs  summary.rs
rkshare_szse/src/: lib.rs
shared/: Cargo.toml
shared/src/: mapping.rs
sites/eastmoney/: Cargo.toml
sites/eastmoney/src/: basic_org_info.ipynb  basic_org_info.rs  center_gridlist.ipynb  center_gridlist.rs  cli.rs
sites/sse/: Cargo.toml
sites/sse/src/: cli.rs  lib.rs
sites/sse/src/stock/: deal_daily.rs  mod.rs  summary.rs
sites/szse/: Cargo.toml
sites/szse/src/: lib.rs  utils.rs
sites/szse/src/stock/: area_summary.rs  mod.rs  summary.rs
sites/xueqiu/: Cargo.toml
sites/xueqiu/src/: cli.rs  detail.rs  lib.rs
