[workspace]
resolver = "3"
members = [
  "pyo3-rkshare",
  "rkshare",
  "rkshare-api",
  "rkshare-eastmoney",
  "rkshare-sse",
  "rkshare-szse",
  "rkshare-tools",
  "rkshare-utils",
  "rkshare-xueqiu",
]

[workspace.dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
arrow = "55.2.0"
bytes = "1.10.1"
derive_more = "2.0.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.13.4", features = ["arrow-55"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
tokio = { version = "1.46.1", features = ["full"] }
url = "2.5.4"

[workspace.lints.rust]
missing_docs = "warn"
