[workspace]
resolver = "3"
members = [
  "pyo3-rkshare",
  "rkshare",
  "rkshare-api",
  "rkshare-eastmoney",
  "rkshare-sse",
  "rkshare-szse",
  "rkshare-tools",
  "rkshare-utils",
  "rkshare-xueqiu",
]

[workspace.dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
arrow = "56.0.0"
arrow-json = "56.0.0"
arrow-select = "56.0.0"
bon = "3.7.0"
bytes = "1.10.1"
derive_more = "2.0.1"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-arrow = "0.11.0"
pyo3-build-config = "0.25.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.13.5", features = ["arrow-56"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
tokio = { version = "1.46.1", features = ["full"] }
url = "2.5.4"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

