[workspace]
resolver = "3"
members = [
  # 总括包
  "rkshare",

  "shared",

  # 网站数据源
  "sites/eastmoney",
  "sites/sse",
  "sites/szse",
  # "sites/xueqiu",

  # 命令行工具
  "cli",

  # API 接口
  "rkshare-api",

  # 语言绑定
  "pyo3-rkshare",
]

[workspace.dependencies]
anyhow = "1.0.98"
arrow = "56.0.0"
arrow-json = "56.0.0"
arrow-select = "56.0.0"
bon = "3.7.0"
bytes = "1.10.1"
argh = "0.1.13"
derive_more = "2.0.1"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-arrow = "0.11.0"
pyo3-build-config = "0.25.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.13.5", features = ["arrow-56"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
tokio = { version = "1.46.1", features = ["full"] }
url = "2.5.4"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

