[package]
name = "rkshare-eastmoney"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arrow = { workspace = true }
bytes = "1.10.1"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_arrow = { version = "0.13.4", features = ["arrow-55"] }
url.workspace = true

rkshare-utils.path = "../rkshare-utils"

argh = { version = "0.1.13", optional = true }

[features]
cli = ["argh"]

