[package]
name = "rkshare-eastmoney"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
argh = { workspace = true, optional = true }
arrow.workspace = true
arrow-json.workspace = true
bon.workspace = true
bytes.workspace = true
reqwest.workspace = true
rkshare-utils.path = "../rkshare-utils"
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[features]
cli = ["dep:argh"]

