[package]
name = "rkshare-server"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { workspace = true, features = ["csv"] }
axum = { version = "0.8.4", features = ["macros"] }
rkshare = { path = "../rkshare" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
