[package]
name = "rkshare-sse"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { workspace = true, optional = true }
anyhow.workspace = true
arrow.workspace = true
bon.workspace = true
bytes.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_arrow.workspace = true
serde_json.workspace = true
url.workspace = true
rkshare-utils.path = "../rkshare-utils"

[features]
cli = ["dep:argh"]
