[package]
name = "rkshare-szse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytes = "1.10.1"
calamine = "0.29.0"
either = { workspace = true }
polars = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
