[package]
name = "rkshare-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rkshare"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
bytes.workspace = true
arrow = { workspace = true, features = ["csv", "prettyprint"] }
rkshare = { path = "../rkshare", features = ["cli"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }

# 命令行
argh.workspace = true
