[package]
name = "rkshare-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
doc = false
name = "rkshare"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argh.workspace = true
arrow = { workspace = true, features = ["csv"] }
bytes.workspace = true
rkshare = { features = ["cli", "pretty"], path = "../rkshare" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

