[package]
name = "rkshare-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
argh = { workspace = true, optional = true }
arrow.workspace = true
bytes.workspace = true
derive_more = { version = "2.0.1", features = ["display", "from"] }
serde = { workspace = true, optional = true }

[features]
cli = ["dep:argh", "dep:serde"]
default = ["cli"]

