[package]
name = "rkshare"
version = "0.1.0"
edition = "2024"

[dependencies]
rkshare-eastmoney.path = "../rkshare-eastmoney"
rkshare-sse.path = "../rkshare-sse"
rkshare-szse.path = "../rkshare-szse"
rkshare-utils.path = "../rkshare-utils"
rkshare-xueqiu.path = "../rkshare-xueqiu"

[dev-dependencies]
arrow.workspace = true
rkshare-utils = { features = ["pretty"], path = "../rkshare-utils" }
serde.workspace = true
tokio.workspace = true

[features]
cli = ["rkshare-eastmoney/cli", "rkshare-utils/cli", "rkshare-xueqiu/cli"]
pretty = ["rkshare-utils/pretty"]

