[package]
name = "rkshare"
version = "0.1.0"
edition = "2024"

[dependencies]
rkshare-eastmoney.path = "../sites/eastmoney"
rkshare-sse.path = "../sites/sse"
rkshare-szse.path = "../sites/szse"
rkshare-shared.path = "../shared/"
# rkshare-xueqiu.path = "../sites/xueqiu"

[features]
cli = [
  "rkshare-eastmoney/cli",
  "rkshare-shared/cli",
  # "rkshare-xueqiu/cli",
  "rkshare-sse/cli"
]
pretty = ["rkshare-shared/pretty"]

