[package]
name = "rkshare_sse"
version = "0.1.0"
edition = "2024"

[dependencies]
either = "1.15.0"
polars = { version = "0.49.1", features = ["json", "polars-io", "lazy"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
