[package]
name = "rkshare_sse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
either = { workspace = true }
polars = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
