[package]
name = "rkshare-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
argh = { workspace = true, optional = true }
arrow = { workspace = true, features = ["prettyprint"] }
bytes.workspace = true
derive_more = { version = "2.0.1", features = ["display", "from"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["cli"]
cli = ["dep:argh", "dep:serde"]
pretty = ["dep:serde_json"]

