[package]
name = "pyo3-rkshare"
version = "0.1.0"
edition = "2024"

[lib]
name = "rkshare"
crate-type = ["cdylib"]
doc = false

[dependencies]
arrow.workspace = true
arrow-select.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
pyo3-arrow.workspace = true
rkshare.path = "../../rkshare"
tokio.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true

