[package]
name = "rkshare-xueqiu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
argh = { workspace = true, optional = true }
arrow.workspace = true
bon.workspace = true
bytes.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
rkshare-shared.path = "../../shared/"

[features]
cli = ["dep:argh"]
